--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,6 +16,15 @@ body {
     margin: 0 auto;
 }
 
+.version-history {
+    background-color: $yellow;
+    padding: 15px;
+
+    em {
+        margin-right: 15px;
+    }
+}
+
 h1 {
     color: $red;
     text-align: center;
